--- a/Configs/.local/share/waybar/includes/border-radius.css
+++ b/Configs/.local/share/waybar/includes/border-radius.css
@@ -298,6 +298,10 @@ menu {
     border-radius: 10pt;
 }
 
+menu menuitem:hover {
+    border-radius: 10pt;
+}
+
 window.popup decoration {
     border-radius: 10pt;
 }
