feat: add fade animation for menus and tooltips

--- a/Configs/.local/share/waybar/styles/defaults.css
+++ b/Configs/.local/share/waybar/styles/defaults.css
@@ -270,6 +270,7 @@ window.popup decoration {
 #temperature.warning,
 #temperature.critical {
     background-color: transparent;
+}
 
 menu {
     background-color: @main-bg;
@@ -279,4 +280,21 @@ menu menuitem:hover {
     background-color: @wb-act-bg;
     color: @wb-act-fg;
 }
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+tooltip,
+menu {
+    animation-name: fadeIn;
+    animation-duration: 0.25s;
+    animation-timing-function: ease-out;
+    animation-iteration-count: 1;
 }
